[package]
name = "pg_branch"
repository = "https://github.com/01walid/pg_branch"
homepage = "https://github.com/01walid/pg_branch"
readme = "README.md"
license = "Apache-2.0"
authors = ["Walid Ziouche <hi@walid.dev>"]
version = "0.1.0"
edition = "2021"
keywords = ["postgres", "postgresql", "cli", "dev", "testing", "workflow"]
categories = ["development-tools", "command-line-utilities", "database"]
rust-version = "1.60"
exclude = ["assets/*"]

[dependencies]
serde = "^1.0"
clap = { version = "3.1.6", features = ["derive"] }
chrono = "0.4"
sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
color-eyre = "0.6"
confy = "0.4"
git2 = "0.14"
console = "0.15"
inquire = "0.2"
url = "2.2"
dotenv = '0.15'

[dev-dependencies]
insta = "1.13.0"
serde_derive = "^1.0"
assert_cmd = "2.0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
